--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
               <label>Tracking ID</label>
-              <input type="text" class="form-control" id="tracking_id" placeholder="facebookads">
+              <input type="text" class="form-control" id="tracking_id" placeholder="Eg: facebookads">
             </div>
             <button type="button" class="btn btn-primary btn-block" onclick="generateUrl()">Generate URL</button>
           </form>
